2010-05-29  Werner Koch  <wk@g10code.com>

	* manual/indexstyle.ist: Add from trunk.
	* manual/Makefile.am (EXTRA_DIST): Add it.
	(novices_extra_dist): New.

2010-05-28  Emanuel Schuetze <emanuel@intevation.de>

	* README.es.txt, README.fr.txt, README.ru.txt, README.de.txt,
	README.en.txt, README.ar.txt: Update for 2.0.3

2010-05-27  Emanuel Schuetze <emanuel@intevation.de>

	* manual/indexstyle.ist: Add makeindex style file.

2010-05-26  Emanuel Schuetze <emanuel@intevation.de>

	* manual/gpg4win-compendium-de.tex: Set additional pdf bookmarks
	and options.

	* manual/gpg4win-compendium-de.tex: Add pdf meta information. Add
	subtitle and rearrange title page.

2010-05-25  Emanuel Schuetze <emanuel@intevation.de>

	* manual/fdl-book.tex, manual/gpg4win-compendium-de.tex:
	Optimize for A4 and A5 papersize output. Add boolean var for
	simple switching between these sizes. Prepare compendium book
	printing.

	* manual/Makefile.am: Add makeindex command for dvi build.

	* manual/gpg4win-compendium-de.tex: Repair link to index (add
	phantomsection command).

	* manual/gpg4win-compendium-de.tex: Set pdf meta information as
	option in hperref package. Centering A5 title page. Fix html image
	centering. And some minor format fixes.

2010-05-21  Emanuel Schuetze <emanuel@intevation.de>

	* manual/gpg4win-compendium-de.tex: Switch from dvips to pdflatex. 
	Update IncludeImage command and remove redundant center
	environments. Update index.

	* manual/adele01.eps.gz, sc-winpt-sel-enc-key.eps.gz,
	pk-safe-open.eps.gz, table-3.eps.gz, sc-gpa-rungpa.eps.gz,
	sc-ol-send-enc-msg2.eps.gz, sc-misc-mein-key-asc.eps.gz,
	pk-safe-opened-with-sk.eps.gz, table-2.eps.gz,
	sc-winpt-trayicon.eps.gz, sc-winpt-good-sig.eps.gz,
	sc-ol-send-enc-msg1.eps.gz, mileage-indicator.eps.gz,
	think-passphrase.eps.gz, table-1.eps.gz,
	tangled-schlapphut.eps.gz, key-with-shadow-bit.eps.gz,
	sc-gpa-gen-passwd.eps.gz, clock-face.eps.gz,
	sc-gpa-two-keys.eps.gz, letter-out-of-safe.eps.gz,