@@ -1,21 +1,21 @@
-m4_define(`VERSION',`2.0.2')
+m4_define(`VERSION',`2.0.3')
 m4_define(`DOWNLOAD_URL',`http://ftp.gpg4win.org/gpg4win-VERSION.exe')
-m4_define(`DL_SIZE',`35 MByte')
+m4_define(`DL_SIZE',`34 MByte')
 m4_define(`LDOWNLOAD_URL',`http://ftp.gpg4win.org/gpg4win-light-VERSION.exe')
 m4_define(`LDL_SIZE',`12 MByte')
-m4_define(`DL_DATE',`2010-04-12')
-m4_define(`SHA1_SRC',`357a6443fb5b7e0b4f6991c9e84d8536507d1044')
-m4_define(`SHA1_EXE',`b2aad7279b7dd0d688748c8fc63aa561f4ad2b36')
-m4_define(`SHA1_EXL',`6b8c28b68a2b47e4dc5e5a57120e97ccad16e3ce')
-m4_define(`SHA1_EXS',`62042b9eb9a4748aaab93d2607a9ae4e44401be0')
-m4_define(`MD5_SRC',`ccc84dd80269be1e11779aeb16277d6e')
-m4_define(`MD5_EXE',`cdcac8531b17e98f7e8f52013be2dcc9')
-m4_define(`MD5_EXL',`0f040f27dac6ccb653245f84d52d1f00')
-m4_define(`MD5_EXS',`af3381aeb3cb246d23e0c33a5a01101e')
-m4_define(`LEN_SRC',`5369702')
-m4_define(`LEN_EXE',`36734496')
-m4_define(`LEN_EXL',`12405515')
-m4_define(`LEN_EXS',`263695312')
+m4_define(`DL_DATE',`2010-05-29')
+m4_define(`SHA1_SRC',`f21b20f7d05a0555416f86be9b85e6090ec16572')
+m4_define(`SHA1_EXE',`30d25ce2f411afb58f8346f1c6036158fc7884f5')
+m4_define(`SHA1_EXL',`08db08232b5882e27f8f6b819bac3dbc8d077024')
+m4_define(`SHA1_EXS',`7a5ef4be44ac712e2b77a77156dbaede2529c03d')
+m4_define(`MD5_SRC',`dd37cdc2e3688fa9346cbe97a9a01629')
+m4_define(`MD5_EXE',`2a1714b35574bed43674d460ad8bc848')
+m4_define(`MD5_EXL',`51d3109a522146ef4b854f161af41cd6')
+m4_define(`MD5_EXS',`d6c1dc1192978ea4d532d0b78807c472')
+m4_define(`LEN_SRC',`7458825')
+m4_define(`LEN_EXE',`35928589')
+m4_define(`LEN_EXL',`12405860')
+m4_define(`LEN_EXS',`265784974')
 m4_define(`DLPAGE',`I18N(`EN',`download.html')`'I18N(`DE',`download-de.html')')
 m4_define(`MIRROR_IE_URL',`http://ftp.heanet.ie/mirrors/ftp.gpg4win.org/')
 m4_define(`SOFTWARE',`
@@ -28,7 +28,7 @@ I18N(`EN', `<a href="http://www.gnupg.org/related_software/gpa/index.html">GPA</
 I18N(`EN', `<a href="doc/gpg4win-compendium-de.html">Gpg4win Compendium</a> (German!)')I18N(`DE', `<a href="doc/gpg4win-compendium-de.html">Gpg4win-Kompendium</a>') 3.0.0-rc1
 I18N(`EN', `<a href="handbuecher/novices.html">Gpg4win for Novices</a> 1.0.0')')
 
-m4_define(`COMPENDIUM_VERSION_DE',`3.0.0-rc1')
-m4_define(`COMPENDIUM_DATE_DE',`2010-04-01')
-m4_define(`DOWNLOAD_URL_COMPENDIUM_DE',`http://wald.intevation.org/frs/download.php/727/gpg4win-compendium-de-3.0.0-rc1.pdf')
-m4_define(`DL_SIZE_COMPENDIUM_DE',`2.3 MByte')
+m4_define(`COMPENDIUM_VERSION_DE',`3.0.0')
+m4_define(`COMPENDIUM_DATE_DE',`2010-05-21')
+m4_define(`DOWNLOAD_URL_COMPENDIUM_DE',`http://wald.intevation.org/frs/download.php/744/gpg4win-compendium-de-3.0.0.pdf')
+m4_define(`DL_SIZE_COMPENDIUM_DE',`3.2 MByte')
