@@ -1,5 +1,7 @@
 2010-05-29  Werner Koch  <wk@g10code.com>
 
+	* website/versions.m4: Post release update.
+
 	* manual/indexstyle.ist: Add from trunk.
 	* manual/Makefile.am (EXTRA_DIST): Add it.
 	(novices_extra_dist): New.
